# star

./: .gitignore  README.md  config.py  pyproject.toml  run.py  run_config.py
scratch/: development.ipynb  temp_base_output.pkl  temp_dpo_output.pkl  temp_output_generate.csv  temp_output_generate.pkl  temp_output_generate_post_fine_tune.pkl
star/: init_configs.py
star/agent/: agent.py  config.py
star/dataset/: dataset.py
star/logger/: config.py  logger.py
star/model/: config.py  model.py
star/trainer/: config.py  trainer.py
star/utils/: utils.py
